...
    android:gravity="center"
    android:orientation="vertical"
    >

    <EditText

        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email address"
        android:drawableRight="@drawable/ic_baseline_email_24"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="313dp" />


    <EditText
        android:layout_below="@+id/email"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        tools:layout_editor_absoluteX="202dp"
...

    <Button
        android:layout_below="@id/password"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:backgroundTint="@color/teal_700"
        android:text="Login"
        />

    <TextView
        android:gravity="center"
        android:id="@+id/errors"
        android:layout_width="match_parent"
...
