<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".viewModel.AdminControl">


  <com.google.android.material.tabs.TabLayout
      android:id="@+id/tabs"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:tabGravity="fill"
      android:background="@color/teal_700"
      app:tabIndicatorColor="@android:color/white"
      app:tabIndicatorHeight="4dp"
      app:tabMode="scrollable"
      app:tabTextColor="@android:color/white" />

  <androidx.viewpager.widget.ViewPager
      android:padding="5dp"
      android:layout_below="@id/tabs"
      android:id="@+id/viewpager"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

</RelativeLayout>