...
        android:layout_marginBottom="5dp"
        android:layout_marginTop="2dp"
        android:weightSum="100"
        >

        <EditText
            android:id="@+id/news_comments_id"
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="top"
            android:lines="3"
            android:hint="Add your comment" />

        <ImageView
            android:id="@+id/send_comment"
            android:clickable="true"
            android:layout_weight="90"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_send_24"
...
